--- a/login-Form/login.html
+++ b/login-Form/login.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <h1>Login Form</h1>
-    <form action="login.html" class="loginform">
+    <form action="/index.html" class="loginform">
         <div class="form-group">
           <label for="exampleInputEmail1">Email</label>
           <input type="email" class="form-control"  aria-describedby="emailHelp" placeholder="Enter email">
